# possum

./: .gitignore  Cargo.toml  README.md
src/: annotation.rs  lint.rs  main.rs
src/cli/: mod.rs
src/cli/render/: debug.rs  mod.rs  oneline.rs
src/document/: annotation.rs  document.rs  mod.rs
src/project/: builder.rs  mod.rs
src/scavenge/: ast.rs  document.rs  extraction.rs  mod.rs  parser.rs  visitor.rs  workflow.rs  yaml.rs
src/scavenge/parsers/: concrete.rs  conditional.rs  container.rs  mod.rs  object.rs  transform.rs
src/scavenge/workflow/: mod.rs  parser.rs  visitor.rs  workflow.rs
src/scavenge/workflow/ast/: core.rs  job.rs  mod.rs  on.rs
src/workflow/: base.rs  event.rs  job.rs  mod.rs  on.rs  parser.rs  step.rs  triggers.rs  workflow.rs
src/workflow/event/: activity.rs  bodies.rs  event.rs  mod.rs  name.rs
src/workflow/lints/: jobs.rs  mod.rs  workflows.rs
src/workflow/parser/: concurrency.rs  event.rs  input.rs  job.rs  mod.rs  on.rs  permissions.rs  step.rs  strategy.rs
test-worklows/.github/workflows/: map-concur.yml  str-concur.yml  too-many-documents.yml
