[package]
name = "possum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
thiserror = "1.0.38"
yaml-peg = "1.0.5"

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"
