[package]
name = "possum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
yaml-peg = "1.0.5"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
glob = "0.3.1"

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"
